added README with plan

--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -36,7 +36,8 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="PassGen2.js"></script>
   </body>
 
 </html>
