--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -29,6 +29,26 @@
           ></textarea>
         </div>
 
+        <div class="checkBox">
+          <input type="checkbox" id="lowerCase">
+          <label>Included Lowercase Letters</label>
+        </div>
+
+        <div class="checkBox">
+          <input type="checkbox" id="upperCase">
+          <label>Include Uppercase Letters</label>
+        </div>
+
+        <div class="checkBox">
+          <input type="checkbox" id="numbers">
+          <label>Include Numbers</label>
+        </div>
+
+        <div class="checkBox">
+          <input type="checkbox" id="symbols">
+          <label>Include Symbols</label>
+        </div>
+
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
