--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -29,10 +29,10 @@
           ></textarea>
         </div>
 
-        <div id="sliderDiv">
+        <div class="checkBox" id="sliderDiv">
           <input type="range" min="8" max="128" id="charNum">
         </div>
-        
+
         <div class="checkBox">
           <input type="checkbox" id="lowerCase">
           <label>Included Lowercase Letters</label>
