committing to insure no work is lost

--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -31,6 +31,7 @@
 
         <div class="checkBox" id="sliderDiv">
           <input type="range" min="8" max="128" id="charNum">
+          <input type="text" id="textInput" value="">
         </div>
 
         <div class="checkBox">
