reorganized code to be more legible

--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -31,7 +31,7 @@
 
         <div class="checkBox" id="sliderDiv">
           <input type="range" min="8" max="128" id="charNum">
-          <input type="text" id="textInput" value="">
+          <span id="rangeSpan">24</span>
         </div>
 
         <div class="checkBox">
