--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/CSS/style.css" />
   </head>
 
   <body>
@@ -64,7 +64,7 @@
     </div>
 
     <!-- <script src="script.js"></script> -->
-    <script src="PassGen2.js"></script>
+    <script src="./assets/JS/Attempt3.js"></script>
   </body>
 
 </html>
