--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -56,7 +56,7 @@
           </div>
 
           <div class="card-footer">
-            <button id="generate" class="btn" type="submit">Generate Password</button>
+            <button id="generate" class="btn" type="button">Generate Password</button>
           </div>
         </form>
         
