--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <!-- <script src="script.js"></script> -->
-    <script src="./assets/JS/attempt3.js"></script>
+    <script src="./assets/JS/script.js"></script>
   </body>
 
 </html>
