--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -65,6 +65,8 @@
 
     <!-- <script src="script.js"></script> -->
     <script src="./assets/JS/script.js"></script>
+    <script src="./assets/JS/modules/genCharCodes.js"></script>
+
   </body>
 
 </html>
