--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -65,7 +65,7 @@
 
     <!-- <script src="script.js"></script> -->
     <script src="./assets/JS/script.js"></script>
-    <script src="./assets/JS/modules/genCharCodes.js"></script>
+    <!-- <script src="./assets/JS/modules/genCharCodes.js"></script> -->
 
   </body>
 
