using generateBtn again

--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -29,7 +29,7 @@
           ></textarea>
         </div>
 
-        <form id="form">
+        <form>
           <div class="checkBox" id="charNumDiv">
             <input type="text" id="charNum" value="24">
             <label>Character Amount(8 - 124)</label>
