creating funciton to retrun master array

--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <!-- <script src="script.js"></script> -->
-    <script src="./assets/JS/scrip2t.js"></script>
+    <script src="./assets/JS/script2.js"></script>
     <!-- <script src="./assets/JS/modules/genCharCodes.js"></script> -->
 
   </body>
