got display to show password, PROJECT DONE FOR NOW

--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -34,11 +34,11 @@
             <input type="text" id="charNum" value="24">
             <label>Character Amount(8 - 124)</label>
           </div>
-          <div id="whichChar">
+          <!-- <div id="whichChar">
             <div class="checkBox">
               <input type="checkbox" id="lowerCase">
               <label>Included Lowercase Letters</label>
-            </div>
+            </div> -->
 
             <div class="checkBox">
               <input type="checkbox" id="upperCase">
